[tool.poetry]
name = "sexgraph"
version = "0.1.0"
description = ""
authors = ["Ian Scott Knight <isk@alumni.stanford.edu>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
